--- a/guestbook/guestbookapp/templates/base.html
+++ b/guestbook/guestbookapp/templates/base.html
@@ -21,8 +21,8 @@
         </main>
         <footer>
              <div class="fancy_div flexer">
-                <p>Сайт сделал <a href="https://vk.com/adefe">Adefe</a></p>
-            </div>
+                <p>Сайт сделал <a href="https://vk.com/adefe">Adefe</a></p> <p>Хостит <a href="https://vk.com/alexa64">Alexa64</a></p>
+             </div>
         </footer>
     </body>
 </html>
