--- a/guestbook/guestbookapp/templates/base.html
+++ b/guestbook/guestbookapp/templates/base.html
@@ -1,7 +1,7 @@
 {% load static %}
 <html>
     <head>
-        <title>Доска объявлений</title>
+        <title>Harmful Cloud ML Project</title>
         <link rel="stylesheet" href="{% static "style.css" %}">
         <link rel="preconnect" href="https://fonts.googleapis.com">
         <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -11,8 +11,8 @@
     <body>
         <header>
             <div class="fancy_div flexer">
-                <img class="logo_img" src="{% static "logo.png" %}">
-                <p>Доска объявлений</p>
+                <img class="logo_img" src="{% static "logo.gif" %}">
+                <p>Harmful Cloud ML Project</p>
             </div>
         </header>
         <main class="parent_div">
@@ -20,8 +20,8 @@
             {% endblock %}
         </main>
         <footer>
-             <div class="fancy_div flexer">
-                <p>Сайт сделал <a href="https://vk.com/adefe">Adefe</a></p> <p>Хостит <a href="https://vk.com/alexa64">Alexa64</a></p>
+             <div class="fancy_div flexer_lesser">
+                <p class="center">Собрал данные и сделал сайт: <a href="https://vk.com/adefe">Adefe</a></p><p class="center">Исследовал и обучил модель: <a href="https://vk.com/howardano">howardano</a></p><p class="center">Помогал исследовать модель и метрики: <a href="https://vk.com/govno_buyvola">nokrolikno</a></p><p class="center">Хостит: <a href="https://vk.com/alexa64">Alexa64</a></p>
              </div>
         </footer>
     </body>
