--- a/guestbook/guestbookapp/templates/message.html
+++ b/guestbook/guestbookapp/templates/message.html
@@ -11,6 +11,9 @@
                         <div class="text_div">
                             {{ item.text }}
                         </div>
+                        <div class="text_div">
+                            <b>Нейросеть ответила:</b> {{ item.answer }}
+                        </div>
                     </div>
                 </div>
             </div>
