--- a/guestbook/guestbookapp/templates/main.html
+++ b/guestbook/guestbookapp/templates/main.html
@@ -21,6 +21,9 @@
                         <div class="text_div">
                             {{ item.text }}
                         </div>
+                        <div class="text_div">
+                            <b>Нейросеть ответила:</b> {{ item.answer }}
+                        </div>
                     </div>
                 </div>
                 {% endfor %}
