--- a/guestbook/guestbookapp/templates/base.html
+++ b/guestbook/guestbookapp/templates/base.html
@@ -21,7 +21,7 @@
         </main>
         <footer>
              <div class="fancy_div flexer_lesser">
-                <p class="center">Собрал данные и сделал сайт: <a href="https://vk.com/adefe">Adefe</a></p><p class="center">Исследовал и обучил модель: <a href="https://vk.com/howardano">howardano</a></p><p class="center">Помогал исследовать модель и метрики: <a href="https://vk.com/govno_buyvola">nokrolikno</a></p><p class="center">Хостит: <a href="https://vk.com/alexa64">Alexa64</a></p>
+                <p class="center">Собрал данные и сделал сайт: <a href="https://vk.com/adefe">Adefe</a></p><p class="center">Исследовал и обучил модель: <a href="https://vk.com/howardano">howardano</a></p><p class="center">Помогал исследовать модель и метрики: <a href="https://vk.com/govno_buyvola">nokrolikno</a></p><p class="center">Спасибо за хостинг: <a href="https://vk.com/alexa64">Alexa64</a></p>
              </div>
         </footer>
     </body>
